--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   collection: ^1.19.0
   go_router: ^14.8.0
   flutter_screenutil: ^5.9.3
+  fl_chart: ^0.65.0
 
 dev_dependencies:
   flutter_test:
