--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,8 @@ dependencies:
   collection: ^1.19.0
   go_router: ^14.8.0
   flutter_screenutil: ^5.9.3
-  fl_chart: ^0.65.0
+  data_table_2: ^2.5.18
+  fl_chart: ^0.70.2
 
 dev_dependencies:
   flutter_test:
