--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "grabby_babby_admin",
-    "short_name": "grabby_babby_admin",
+    "name": "Aussie Collectables",
+    "short_name": "Aussie Collectables",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "description": "Aussie Collectables Admin Dashboard",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
