--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   flutter_screenutil: ^5.9.3
   data_table_2: ^2.5.18
   fl_chart: ^0.70.2
+  http: ^1.3.0
+  file_picker: ^9.0.2
+  get_storage: ^2.1.1
 
 dev_dependencies:
   flutter_test:
