--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   file_picker: ^9.0.2
   get_storage: ^2.1.1
   gap: ^3.0.1
+  calendar_date_picker2: ^2.0.0
 
 dev_dependencies:
   flutter_test:
