--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   intl: ^0.20.2
   dio: ^5.8.0+1
   connectivity_plus: ^6.1.3
+  responsive_framework: ^0.2.0
   dartz: ^0.10.1
   universal_html: ^2.2.4
   pretty_dio_logger: ^1.4.0
