--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   get_storage: ^2.1.1
   gap: ^3.0.1
   calendar_date_picker2: ^2.0.0
+  multi_dropdown: ^3.0.1
 
 dev_dependencies:
   flutter_test:
