--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   gap: ^3.0.1
   calendar_date_picker2: ^2.0.0
   multi_dropdown: ^3.0.1
+  firebase_core: ^3.13.0
+  firebase_messaging: ^15.2.5
 
 dev_dependencies:
   flutter_test:
