--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,3 +53,6 @@ flutter:
     - family: Archivo
       fonts:
         - asset: assets/fonts/Archivo.ttf
+    - family: Inter
+      fonts:
+        - asset: assets/fonts/Inter.ttf
