--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   multi_dropdown: ^3.0.1
   firebase_core: ^3.13.0
   firebase_messaging: ^15.2.5
+  image_picker: ^1.1.2
+  firebase_storage: ^12.4.9
 
 dev_dependencies:
   flutter_test:
